# Advanced-Cloud-Deployment

./: .gitignore  APPLICATION_GUIDE.md  COMPLETE_TODO_APP.html  DEPLOYMENT_INFO.md  Dockerfile  Dockerfile.railway  FINAL_COMPLETE_TODO_APP.html  FINAL_SUMMARY.md  README.md  README_ACCESS.md  RUNTIME.md  STATIC_TODO_APP.html  TEST_INSTRUCTIONS.txt  deploy_minikube.sh  docker-compose.yml  pyproject.toml  railway.json  requirements.txt  setup.sh  test.db
.github/workflows/: ci-cd.yml  github-pages.yml
api/: __init__.py  database.py  kafka_consumer.py  kafka_producer.py  main.py  models.py
charts/todo-chatbot/: Chart.yaml  values.yaml
charts/todo-chatbot/templates/: NOTES.txt  dapr-components.yaml
dapr/: config.yaml  pubsub.yaml  secrets.yaml  statestore.yaml
deployments/: aks-deployment.yaml  api-deployment.yaml  audit-service-deployment.yaml  chat-api-deployment.yaml  frontend-deployment.yaml  full-deployment.yaml  gke-deployment.yaml  notification-service-deployment.yaml  recurring-task-service-deployment.yaml  websocket-service-deployment.yaml
docs/: deployment.md  github_setup.md  implementation_summary.md  index.html  no-cache.html  professional.html  quick_start.md
frontend/: Dockerfile  next.config.js  package.json
frontend/public/: index.html
frontend/src/pages/: index.js
frontend/src/pages/api/: tasks.js
frontend/src/styles/: Home.module.css
infrastructure/: dapr-components.yaml
infrastructure/kafka/: kafka-deployment.yaml  kafka-topics.yaml
minikube/: kafka-deployment.yaml
services/audit-service/: Dockerfile  main.py  pyproject.toml
services/chat-api/: Dockerfile  database.py  main.py  pyproject.toml
services/notification-service/: Dockerfile  main.py  pyproject.toml
services/recurring-task-service/: Dockerfile  kafka_producer.py  main.py  pyproject.toml
services/websocket-service/: Dockerfile  main.py  pyproject.toml
tests/: conftest.py  test_api.py  test_kafka.py  test_models.py
